--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,52 @@
-<h1 class="header">我是 header</h1>
+<!-- <h1 class="header">我是 header</h1>
 <a href="index.html">index</a>
 <a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<a href="contact.html">contact</a> -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary vh-100">
+    <div class="container-fluid flex-column align-items-start px-0 h-100">
+        <a class="navbar-brand px-2 mb-4" href="#"><img src="../assets/images/logo-ANSWER.svg" alt=""></a>
+            <ul class="navbar-nav flex-column">
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" aria-current="page" href="#"><span
+                            class="material-symbols-outlined fill-icon align-bottom me-3">
+                            assessment</span>Dashboard</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" href="#"><span
+                            class="material-symbols-outlined align-bottom me-3">
+                            forum </span>Question</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link active border-start border-3 border-success text-success" aria-current="page" href="#">
+                        <span class="material-symbols-outlined align-bottom me-2">
+                        assignment</span>Assignment</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" href="#">
+                        <span class="material-symbols-outlined align-bottom me-2">
+                        video_library </span>Course</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light"
+                        href=""><span class="material-symbols-outlined align-bottom me-3">
+                            group </span>Admin</a>
+                </li>
+                <li class="nav-item mb-4">
+                    <a class="nav-link border-start border-3 border-light" href="#">
+                        <span class="material-symbols-outlined align-bottom me-3">
+                            settings </span>Settings</a>
+                </li>
+            </ul>
+            <div class="d-flex px-2 mt-auto">
+                <div class="flex-shrink-0">
+                    <img src="../assets/images/andychen.jpeg" alt="..." 
+                    width="48" height="48" class="rounded-circle object-fit-cover">
+                </div>
+                <div class="flex-grow-1 ms-3">
+                    <p class="fw-bold h5">Andy Chen</p>
+                    <a class="text-secondary h6" href="mailto:andy0401@mail.com">andy0401@mail.com</a>
+                </div>
+            </div>
+       
+    </div>
+</nav>
