--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,43 +1,39 @@
-<!-- <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a> -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary vh-100">
+<aside class="navbar navbar-expand-lg bg-body-tertiary vh-100 position-fixed top-0">
     <div class="container-fluid flex-column align-items-start px-0 h-100">
         <a class="navbar-brand px-2 mb-4" href="#"><img src="../assets/images/logo-ANSWER.svg" alt=""></a>
             <ul class="navbar-nav flex-column">
                 <li class="nav-item mb-2">
                     <a class="nav-link border-start border-3 border-light" aria-current="page" href="#"><span
-                            class="material-symbols-outlined fill-icon align-bottom me-3">
+                            class="material-symbols-outlined fill-icon align-bottom me-2 px-2">
                             assessment</span>Dashboard</a>
                 </li>
                 <li class="nav-item mb-2">
                     <a class="nav-link border-start border-3 border-light" href="#"><span
-                            class="material-symbols-outlined align-bottom me-3">
+                            class="material-symbols-outlined align-bottom me-2 px-2">
                             forum </span>Question</a>
                 </li>
                 <li class="nav-item mb-2">
                     <a class="nav-link active border-start border-3 border-success text-success" aria-current="page" href="#">
-                        <span class="material-symbols-outlined align-bottom me-2">
+                        <span class="material-symbols-outlined align-bottom me-2 px-2">
                         assignment</span>Assignment</a>
                 </li>
                 <li class="nav-item mb-2">
                     <a class="nav-link border-start border-3 border-light" href="#">
-                        <span class="material-symbols-outlined align-bottom me-2">
+                        <span class="material-symbols-outlined align-bottom me-2 px-2">
                         video_library </span>Course</a>
                 </li>
                 <li class="nav-item mb-2">
                     <a class="nav-link border-start border-3 border-light"
-                        href=""><span class="material-symbols-outlined align-bottom me-3">
+                        href=""><span class="material-symbols-outlined align-bottom me-2 px-2">
                             group </span>Admin</a>
                 </li>
-                <li class="nav-item mb-4">
+                <li class="nav-item mb-4 px-2">
                     <a class="nav-link border-start border-3 border-light" href="#">
-                        <span class="material-symbols-outlined align-bottom me-3">
+                        <span class="material-symbols-outlined align-bottom me-2">
                             settings </span>Settings</a>
                 </li>
             </ul>
-            <div class="d-flex px-2 mt-auto">
+            <div class="d-flex px-4 mt-auto mb-4">
                 <div class="flex-shrink-0">
                     <img src="../assets/images/andychen.jpeg" alt="..." 
                     width="48" height="48" class="rounded-circle object-fit-cover">
@@ -49,4 +45,4 @@
             </div>
        
     </div>
-</nav>
+</aside>
